--- a/admin/admin.css
+++ b/admin/admin.css
@@ -18,6 +18,23 @@ div.link {
     font-style: italic;
 }
 
+[title] {
+    text-decoration: underline;
+    text-decoration-style: dotted;
+    text-decoration-color: #999;
+}
+[title]:hover {
+    color: #33d;
+}
+
+a:link, a:visited {
+    color: #00a;
+}
+a:hover {
+    text-decoration: none;
+    color: #00f;
+}
+
 table {
     border-collapse: collapse;
 }
@@ -25,3 +42,13 @@ table.bordered td, table.bordered th {
     border: 1px solid #000;
     padding: 3px;
 }
+tr.section td {
+    font-weight: bold;
+    padding-bottom: 4px;
+    padding-top: 18px;
+    text-decoration: underline;
+}
+tr.title {
+    font-weight: bold;
+}
+
