--- a/admin/admin.css
+++ b/admin/admin.css
@@ -60,7 +60,10 @@ p.header {
     margin: 0;
 }
 button.request {
-    padding: 5px;
+    padding: 8px;
+    border: 1px outset #222;
+    border-radius: 5px;
+    margin-right: 3px;
 }
 .requesthistory {
     font-size: 0.9em;
