--- a/indexpage/indexpage.css
+++ b/indexpage/indexpage.css
@@ -14,6 +14,17 @@
   th a {
     text-decoration: none;
   }
+  a.owner {
+      display: inline-block;
+      padding: 1em;
+      margin: 1em;
+      border: 1px solid #999;
+      text-decoration: underline;
+  }
+  a.owner:hover {
+      color: #00f;
+      text-decoration: none;
+  }
 
   @media (prefers-color-scheme: dark) {
     body {
@@ -38,6 +49,10 @@
     }
     th a:hover, a:link, a:visited {
       color: #ff9;
+    }
+    a.owner {
+        border: 1px solid #ccf;
+        color: #00c;
     }
   }
 
@@ -64,5 +79,8 @@
     }
     th a:hover, a:link, a:visited {
       color: #33f;
+    }
+    a.owner {
+        color: #00a;
     }
   }
