--- a/admin/admin.css
+++ b/admin/admin.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial;
     font-size: 11pt;
     margin: 20px;
-    background-image: linear-gradient(145deg,#fffcf9, #fff9f0, #f7e9e0, #fff7f0);
+    background-image: linear-gradient(145deg, #fffcf9, #fff9f0, #f7e9e0, #fff7f0);
 }
 h2 {
     color: #ec4301;
@@ -18,7 +18,12 @@ div.link {
     font-size: 0.8em;
     color: #666;
     font-family: Consolas, monospace;
+    margin-top: -0.8em;
     margin-bottom: 1em;
+}
+div.link a {
+    text-decoration: none;
+    color: #666;
 }
 .lastquestion {
     font-style: italic;
