--- a/admin/admin.css
+++ b/admin/admin.css
@@ -2,10 +2,12 @@ html {
     height: 100%;
 }
 body {
-    font-family: Arial;
+    font-family: Arial, sans-serif;
     font-size: 11pt;
     margin: 20px;
     background-image: linear-gradient(145deg, #fffcf9, #fff9f0, #f7e9e0, #fff7f0);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 h2 {
     color: #ec4301;
@@ -89,12 +91,12 @@ button.request {
     border: 1px solid #ccc;
     background-color: #ffe;
     padding: 1em;
-    font-family: Consolas;
+    font-family: Consolas, monospace;
     font-size: 1em;
     color: #333;
 }
 .command {
-    font-family: Consolas;
+    font-family: Consolas, monospace;
     color: #060;
 }
 input, select {
