--- a/indexpage/indexpage.css
+++ b/indexpage/indexpage.css
@@ -47,6 +47,14 @@ a.owner:hover {
     text-align: right;
     padding-right: 0.5em;
 }
+input[type="text"] {
+    background-color: var(--background-color);
+    border: 1px solid var(--text-color);
+    border-radius: 3px;
+    color: var(--text-color);
+    padding: 0.1em;
+    margin: 0.1em;
+}
 
 @media (prefers-color-scheme: dark) {
     :root {
